License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.0
DATE 0x/xx/2009
28th Alpha Release

NEWS:

NEW: [features/enhancements]
+BackTab can no be used to compress space that is embedded in a line.
+Record position changes from mouse clicks in position navigation history.

BUG FIXES:
+Fix copying from OutputBuffer.
+Fix some error handling if file session handling.
+Fix some minor translation issues.
+Don't reposition caret if it was moved during a threaded load operation.
+Fix some errors with setting custom highlighting colors.
+Set highlight foreground colour to White when selection colour is dark.
+Fix search in directory message handler in search controller that caused
 some issues when the dialog had already been created.
+Fix search in directory crash on windows when accessing it from filebrowser.
+Files with embedded NUL bytes can now be loaded properly.
+Properly handle filenames that have spaces in them in the Launch plugin.
+Fix saving of files where pasted in text would cause the encoding of the text
 to fail on write to disk.
+Fix direction choices not being disabled for search in files operation in
 Find dialog.
+Fix error handling for when incorrect regular expressions are used in a
 replace statement.
+Fix error that could occur when right clicking on tab area.
+Fix off by one error in vim jump to line command.

#-----------------------------------------------------------------------------#

VERSION 0.4.95
DATE 06/23/2009
27th Alpha Release

NEWS:

Had planned to wait till 0.5 was ready before doing another release but there
have been too many good enhancements added due to all the great patches submitted
during this cycle to wait for the last push to 0.5 to complete before releasing.

Some of the main new features include buffer syncronziation with the codebrowser
plugin, completely re-worked vi emulation support, position history, and